--- a/preview-src/index.adoc
+++ b/preview-src/index.adoc
@@ -6,7 +6,7 @@ Author Name
 :!example-caption:
 :!table-caption:
 :page-pagination:
-:page-layout: headless
+:page-layout: default
 
 == Heading A
 
