--- a/preview-src/landing-page.adoc
+++ b/preview-src/landing-page.adoc
@@ -3,8 +3,9 @@
 :!example-caption:
 :page-layout: home-saas
 
-
 = Magnolia SaaS
+
+[.info-label]#Early Access for Magnolia Partners#
 
 [.section-hero__paragraph]
 Welcome to the lightspeed Magnolia in the cloud. A platform for developers to build amazing websites and digital experiences — and have fun while you're at it.
