--- a/preview-src/index.adoc
+++ b/preview-src/index.adoc
@@ -8,65 +8,41 @@ Author Name
 :page-pagination:
 :page-layout: default
 
-// ++++
-//   <style>
-//     .card-test {
-//       display: inline-block;
-//       width: 350px;
-//       height: 300px;
-//       background-color: #222;
-//       margin: 10px;
-//       text-align: center;
-//       color: whitesmoke !important;
-//       transition: transform 0.4s;
-//     }
-
-//     .card-test:hover {
-//       transform: scale(1.1);
-//       box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-//     }
-
-//     .card-test h2 {
-//       color: #f6c34d;
-//       font-size: 1.8rem;
-//     }
-
-//     .card-test p {
-//       color: whitesmoke;
-//       font-size: 1.2rem
-//     }
-
-//     .card-test a {
-//       color: whitesmoke;
-//       text-decoration: underline;
-//     }
-
-//     .card-test a:hover {
-//       color: #ffd87e;
-//       text-decoration: underline;
-//     }
-
-//     @media (max-width: 1000px) {
-//       .card-test {
-//         display: block;
-//       }
-//     }
-//   </style>
-
-
-//   <div class="card-test">
-//     <h2>Content Modeling</h1>
-//     <p>Test content</p>
-//     <a href="#">Test link</a>
-//   </div>
-
-//   <div class="card-test">
-//     <h2>Light development</h1>
-//     <p>Test content</p>
-//     <a href="#">Test link</a>
-//   </div>
 
 // ++++
+// <style>
+// .keyboard-key {
+//   display: inline-block;
+//   padding: 10px;
+//   background-color: #f5f5f5;
+//   border: 1px solid #ccc;
+//   border-radius: 4px;
+//   font-family: monospace;
+//   transition: transform 0.1s, box-shadow 0.1s;
+//   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+// }
+
+// .keyboard-key:hover {
+//   transform: translateY(2px);
+//   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+//   cursor: pointer;
+// }
+
+// .keyboard-key span {
+//   font-size: 16px;
+//   color: #555;
+// }
+
+// </style>
+
+// <div class="keyboard-key">
+//   <span>Enter</span>
+// </div>
+
+// ++++
+
+[.keyboard-key]
+Sign up
 
 ---
 
