--- a/preview-src/index.adoc
+++ b/preview-src/index.adoc
@@ -40,17 +40,30 @@ Author Name
 // </div>
 
 // ++++
+:nextReleaseDate: 2023-08-25
+ifeval::["(localdate)" < "{nextReleaseDate}"]
+== Next release
 
-[.collapse]
-Text
+[#targetDate]
+****
+****
 
-[.collapse-content]
-Hello there!
+[#countdown]
+****
+****
 
-[quote,Ilgun]
-____
-We know how to party, what can I say?
-____
+endif::[]
+
+// [.collapse]
+// Text
+
+// [.collapse-content]
+// Hello there!
+
+// [quote,Ilgun]
+// ____
+// We know how to party, what can I say?
+// ____
 
 [.keyboard-key]
 link:www.google.com[sign up^]
