consistent font-size for lists in tables

--- a/preview-src/index.adoc
+++ b/preview-src/index.adoc
@@ -58,6 +58,19 @@ endif::[]
 
 [.inlineBean]#test.info.blah#
 
+[cols="3s,7a"]
+|===
+|Blah |Blah
+
+|bdd
+|ddd
+
+* this
+* is a test
+* for font-size
+
+|===
+
 // [.collapse]
 // Text
 
