--- a/preview-src/index.adoc
+++ b/preview-src/index.adoc
@@ -1,4 +1,6 @@
-:location: 
+:location:
+:page-beta: true
+:beta: true
 = Commenting
 Author Name
 :idprefix:
@@ -7,7 +9,7 @@ Author Name
 :!table-caption:
 :page-pagination:
 :page-layout: default
-
+:page-beta: true
 
 // ++++
 // <style>
@@ -39,11 +41,133 @@ Author Name
 //   <span>Enter</span>
 // </div>
 
-link:www.rte.ie[^]
+// ++++
+// <style>
 
-xref:docs:ROOT:index.adoc[test xref]
+// .floating-badge {
+//   position: fixed;
+//   bottom: 20px;
+//   left: 20px;
+//   background-color: #ff5733; /* Example background color */
+//   color: white;
+//   padding: 8px 16px;
+//   border-radius: 20px;
+//   font-size: 14px;
+//   z-index: 9999; /* Ensure the badge appears above other content */
+//   cursor: pointer;
+//   transition: box-shadow 0.2s ease;
+//   animation: glow 0.7s 10 alternate;
+// }
 
-[.category-label]#Administration# [.category-label]#Bundled: Community Edition#
+// .floating-badge:hover {
+//   animation: glow 0.5s infinite alternate;
+// }
+
+// .dialog {
+//   position: fixed;
+//   bottom: -100%;
+//   left: 50%;
+//   transform: translateX(-50%);
+//   padding: 30px;
+//   border-radius: 10px;
+//   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+//   z-index: 9998; 
+//   transition: bottom 0.5s ease; 
+//   background: whitesmoke;
+//   width: 50vw;
+// }
+
+// .left-content {
+//   float: left;
+//   width: 40%;
+//   height: 200px; 
+//   background-image: url('../../../src/img/rebrand-icon-dark.svg');
+//   background-size: cover;
+//   background-position: center;
+// }
+
+// .right-content {
+//   float: right;
+//   width: 60%;
+//   height: 200px; 
+// }
+
+// .dialog.show {
+//   bottom: 50%; /* Center the dialog vertically */
+// }
+
+// #close-dialog {
+//   display: block;
+//   margin: 0 auto;
+//   margin-top: 20px;
+// }
+
+// @keyframes glow {
+//   0% {
+//     box-shadow: 0 0 5px #ff5733;
+//   }
+//   100% {
+//     box-shadow: 0 0 15px #ff5733;
+//   }
+// }
+
+// .close-icon {
+//   position: absolute;
+//   top: -10px;
+//   right: 15px;
+//   cursor: pointer;
+//   font-size: 15px;
+//   font-weight: bold;
+// }
+
+// </style>
+
+// <div class="floating-badge" id="floating-badge">
+//   <span>Beta</span>
+// </div>
+
+// <div class="dialog" id="dialog">
+//   <div class="close-icon" id="close-dialog">X</div>
+//   <div class="left-content">
+//     <!-- Left content -->
+//   </div>
+//   <div class="right-content">
+//     <!-- Right content -->
+//     <h2>Beta release</h2>
+//     <p>talking</p>
+//   </div>
+// </div>
+
+
+// <script>
+
+// document.addEventListener("DOMContentLoaded", function() {
+//   const floatingBadge = document.getElementById("floating-badge");
+//   const dialog = document.getElementById("dialog");
+//   const closeDialog = document.getElementById("close-dialog");
+
+//   floatingBadge.addEventListener("click", function() {
+//     dialog.classList.add("show");
+//   });
+
+//   closeDialog.addEventListener("click", function() {
+//     dialog.classList.remove("show");
+//   });
+
+//   document.addEventListener("click", function(event) {
+//     if (!dialog.contains(event.target) && !floatingBadge.contains(event.target)) {
+//       dialog.classList.remove("show");
+//     }
+//   });
+
+//   // Prevent the click event from propagating to the document when clicking inside the dialog
+//   dialog.addEventListener("click", function(event) {
+//     event.stopPropagation();
+//   });
+// });
+
+// </script>
+// ++++
 
 {sp} +
 
